[package]
name = "bevy_playground"
version = "0.1.0"
authors = ["Allan Clements"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#While geenerally not a good practice to depend on a commit instead of releases Bevy has a significant fix
#in the replacement of Rayon in https://github.com/bevyengine/bevy/pull/384 that hasn't been published yet
#bevy = "0.1.3"
bevy = { git = "https://github.com/bevyengine/bevy", rev = "54e9f446c4f54b42582a00255f7879f63f18b521" }