[package]
name = "bevy_playground"
version = "0.1.0"
authors = ["Allan Clements"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#While geenerally not a good practice to depend on a commit instead of releases we're wanting to stay on the leading edge of the framework
bevy = { git = "https://github.com/bevyengine/bevy", rev = "a768bae33b9902475d5b50326751b26e10ed36cf" }